ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: name-of-ipaddress
    networking.gke.io/v1beta1.FrontendConfig: name-of-frontendconfig
  name: name-of-ingress-istio
  namespace: istio-system
spec:
  defaultBackend:
    service:
      name: name-of-service
      port:
        number: 80
  tls:
  - hosts:
    - '*.dev-kjt.id'
    secretName: acme-devkjt
